navlink and json added

--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -4,6 +4,8 @@
   --main-bg-color: #1f331e;
   --main-text-color: #184015;
   --main-text-light: #a1bf9f;
+  --secondary-bg-color: #436F41;
+  --secondary-text-input: #B4D1B2;
 }
 
 * {
