--- a/src/pages/Monitoramento/PlantiosExistentes/PlantiosExistentes.css
+++ b/src/pages/Monitoramento/PlantiosExistentes/PlantiosExistentes.css
@@ -28,9 +28,10 @@
     border: 2px solid #184015;
     border-radius: 10px;
     padding: 30px;
-    height: 450px;
     justify-content: space-between;
-    width: 300px;
+    width: 350px;
+    height: 100%;
+    max-height: 600px;
 }
 
 .plantio-img {
