--- a/src/pages/Mercado/VerPlantios/VerPlantios.css
+++ b/src/pages/Mercado/VerPlantios/VerPlantios.css
@@ -39,6 +39,17 @@
     outline: none;
 }
 
+.verPlantios button {
+    cursor: pointer;
+    background-color: var(--main-text-color);
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 8px;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+}
+
 .plantiosVenda {
     display: flex;
     flex-flow: row wrap;
