--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -4,8 +4,8 @@
   --main-bg-color: #1f331e;
   --main-text-color: #184015;
   --main-text-light: #a1bf9f;
-  --secondary-bg-color: #436F41;
-  --secondary-text-input: #B4D1B2;
+  --secondary-bg-color: #436f41;
+  --secondary-text-input: #b4d1b2;
 }
 
 * {
@@ -29,14 +29,14 @@ header {
 }
 
 .content {
-    background-color: var(--main-bg-color);
+  background-color: var(--main-bg-color);
 }
 
 .container-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 48px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 48px;
 }
 
 .container {
@@ -111,7 +111,24 @@ div.links a {
 }
 
 div.links a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
+}
+
+div.link-video {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 20px;
+  justify-content: center;
+}
+
+div.link-video a {
+  color: var(--main-text-light);
+  text-decoration: none;
+}
+
+div.link-video a:hover {
+  text-decoration: underline;
 }
 
 .login button {
